added first four tutorials on: spectra and blob, line and thermal emitters, synch. and SSC, EC

--- a/1_particles_distributions_and_emission_region.ipynb
+++ b/1_particles_distributions_and_emission_region.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 1. Particles distribution and Emission region\n",
     "\n",
-    "In this tutorial we describe the non-thermal particle distributions available in `agnpy` and illustrate how to define the region containing and accelerating them, usually referred to as _emission_ region."
+    "In this tutorial, we describe the non-thermal particle distributions available in `agnpy` and illustrate how to define the region containing and accelerating them, usually referred to as _emission_ region."
    ]
   },
   {
@@ -20,7 +20,7 @@
     "# import numpy, astropy and matplotlib for basic functionalities\n",
     "import numpy as np\n",
     "import astropy.units as u\n",
-    "from astropy.constants import m_e, m_p\n",
+    "from astropy.constants import m_e, m_p, c\n",
     "from astropy.coordinates import Distance\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -55,7 +55,7 @@
     "\n",
     "where $k$ is an amplitude in ${\\rm cm}^{-3}$, $p$ the spectral index, and the Heaviside function ensures null values outside the range $[\\gamma_{\\rm min}, \\gamma_{\\rm max}]$. Several analytical functions are available, along with a function that interpolates an series of $n [{\\rm cm}]^{-3}$ values.\n",
     "\n",
-    "We illustrate in the following, how to declare an electron and a proton particle distributions"
+    "We illustrate, in the following, how to declare an electron and a proton particle distributions"
    ]
   },
   {
@@ -121,10 +121,12 @@
     "Some authors use an _integral_ normalisation. That is, the normalisation value provided might represent:\n",
     "\n",
     "- the total volume density, $n_{\\rm tot} = \\int {\\rm d \\gamma} \\, n(\\gamma)$, in ${\\rm cm}^{-3}$;\n",
-    "- the total energy density, $u_{\\rm tot} = \\int {\\rm d \\gamma} \\, \\gamma \\, n(\\gamma)$, in ${\\rm erg}\\,{\\rm cm}^{-3}$;\n",
-    "- the total energy in particles, $W = m c^2 \\, \\int {\\rm d \\gamma} \\, \\gamma \\, n(\\gamma)$, in ${\\rm erg}$.\n",
+    "- the total energy density, $u_{\\rm tot} =  m c^2 \\int {\\rm d \\gamma} \\, \\gamma \\, n(\\gamma)$, in ${\\rm erg}\\,{\\rm cm}^{-3}$;\n",
+    "- the total energy in particles, $W = m c^2 \\, \\int {\\rm d \\gamma} \\, \\gamma \\, N(\\gamma)$, in ${\\rm erg}$.\n",
     "\n",
-    "Others use a *differential* normalisation, that is, the normalisation value provided directly represents the constant, $k$, multiplying the analytical function.\n",
+    "Where, in the last expression $N$ is the number density ($N = V_b n$).\n",
+    "\n",
+    "Others authors use a *differential* normalisation, that is, the normalisation value provided directly represents the constant, $k$, multiplying the analytical function.\n",
     "\n",
     "Finally, some authors use a normalisation *at* $\\gamma=1$, that means the normalisation value provided represents\n",
     "the value of the denisty at $\\gamma=1$.\n",
@@ -138,7 +140,15 @@
    "execution_count": 5,
    "id": "2584d466",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.03e-03 1 / cm3\n"
+     ]
+    }
+   ],
    "source": [
     "# initialise the electron distribution, let us use the same spectral parameters\n",
     "# for all the distributions\n",
@@ -155,6 +165,27 @@
     "    n_tot, p=p, q=q, gamma_0=gamma_0, gamma_min=gamma_min, gamma_max=gamma_max, mass=m_e\n",
     ")\n",
     "\n",
+    "# check total volume density\n",
+    "gamma = np.logspace(0, 7)\n",
+    "integral = np.trapz(n_1(gamma), gamma)\n",
+    "print(f\"{integral:.2e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dcbc64f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.02e-08 erg / cm3\n"
+     ]
+    }
+   ],
+   "source": [
     "# - from total energy density\n",
     "u_tot = 1e-8 * u.Unit(\"erg cm-3\")\n",
     "\n",
@@ -162,6 +193,26 @@
     "    u_tot, p=p, q=q, gamma_0=gamma_0, gamma_min=gamma_min, gamma_max=gamma_max, mass=m_e\n",
     ")\n",
     "\n",
+    "# check total energy density\n",
+    "integral = m_e * c**2 * np.trapz(gamma * n_2(gamma), gamma)\n",
+    "print(f\"{integral.to('erg cm-3'):.2e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7ee177d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.02e+40 erg\n"
+     ]
+    }
+   ],
+   "source": [
     "# - from total energy, we need also the volume to convert to an energy density\n",
     "W = 1e40 * u.erg\n",
     "V_b = 4 / 3 * np.pi * (1e16 * u.cm) ** 3\n",
@@ -177,6 +228,26 @@
     "    mass=m_e,\n",
     ")\n",
     "\n",
+    "# check total energy density\n",
+    "integral = V_b * m_e * c**2 * np.trapz(gamma * n_3(gamma), gamma)\n",
+    "print(f\"{integral.to('erg'):.2e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "76db4bbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0001 1 / cm3\n"
+     ]
+    }
+   ],
+   "source": [
     "# - from the denisty at gamma = 1\n",
     "n_gamma_1 = 1e-4 * u.Unit(\"cm-3\")\n",
     "\n",
@@ -188,12 +259,15 @@
     "    gamma_min=gamma_min,\n",
     "    gamma_max=gamma_max,\n",
     "    mass=m_e,\n",
-    ")"
+    ")\n",
+    "\n",
+    "# check the distribution at gamma=1\n",
+    "print(n_4(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "dc9f8bb8",
    "metadata": {},
    "outputs": [
@@ -251,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "34063549",
    "metadata": {},
    "outputs": [],
@@ -279,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "3c6f72a2",
    "metadata": {},
    "outputs": [
@@ -321,12 +395,12 @@
    "id": "1bb493bd",
    "metadata": {},
    "source": [
-    "Of course, we can add also a proton distribution tot he blob"
+    "we can also add a proton distribution to the blob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "205a1f07",
    "metadata": {},
    "outputs": [
@@ -382,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "5448ed79",
    "metadata": {},
    "outputs": [
@@ -390,18 +464,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total particle number: 2.334177857956186e+47\n",
-      "total particle density: 0.05572439162240685 1 / cm3\n",
-      "total energy in electrons: 2.247477388062395e+43 erg\n",
-      "total energy in protons: 1.019561036206262e+45 erg\n"
+      "total particle number: 2.33e+47\n",
+      "total particle density: 5.57e-02 1 / cm3\n",
+      "total energy in electrons: 2.25e+43 erg\n",
+      "total energy in protons: 1.02e+45 erg\n"
      ]
     }
    ],
    "source": [
-    "print(\"total particle number:\", blob.N_e_tot)\n",
-    "print(\"total particle density:\", blob.n_e_tot)\n",
-    "print(\"total energy in electrons:\", blob.W_e)\n",
-    "print(\"total energy in protons:\", blob.W_p)"
+    "print(\"total particle number:\", f\"{blob.N_e_tot:.2e}\")\n",
+    "print(\"total particle density:\", f\"{blob.n_e_tot:.2e}\")\n",
+    "print(\"total energy in electrons:\", f\"{blob.W_e:.2e}\")\n",
+    "print(\"total energy in protons:\", f\"{blob.W_p:.2e}\")"
    ]
   },
   {
@@ -409,12 +483,12 @@
    "id": "021b8ca3",
    "metadata": {},
    "source": [
-    "We can also check the jet power in  kinetic energy of the particles $P_{\\rm jet, ke}$ (the total kinetic power of the particles) and in magnetic field $P_{\\rm jet, B}$ (the power needed to expel a magnetic-field-laden plasma). The equilibrium between these two quantities defines a condition referred to as *equipartition*."
+    "We can also check the jet power in  kinetic energy of the particles $P_{\\rm jet, ke}$ and in magnetic field $P_{\\rm jet, B}$ (the power needed to expel a magnetic-field-laden plasma). The equilibrium between these two quantities defines a condition referred to as *equipartition*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "2e5c9495",
    "metadata": {},
    "outputs": [
@@ -427,7 +501,7 @@
        "<Quantity 4.6624287e+41 erg / s>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "77acd4c1",
    "metadata": {},
    "outputs": [
@@ -451,7 +525,7 @@
        "<Quantity 7.45724324e+43 erg / s>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
