re-run all the notebooks and created an environment.yml

--- a/1_particles_distributions_and_emission_region.ipynb
+++ b/1_particles_distributions_and_emission_region.ipynb
@@ -81,8 +81,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59d9e938",
+   "metadata": {},
+   "source": [
+    "As we can see, the parameter `mass` distinguishes the particle type."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "8aa8bfc7",
    "metadata": {},
    "outputs": [
@@ -124,7 +132,7 @@
     "- the total energy density, $u_{\\rm tot} =  m c^2 \\int {\\rm d \\gamma} \\, \\gamma \\, n(\\gamma)$, in ${\\rm erg}\\,{\\rm cm}^{-3}$;\n",
     "- the total energy in particles, $W = m c^2 \\, \\int {\\rm d \\gamma} \\, \\gamma \\, N(\\gamma)$, in ${\\rm erg}$.\n",
     "\n",
-    "Where, in the last expression $N$ is the number density ($N = V_b n$).\n",
+    "Where, in the last expression $N$, is the number density ($N = V_b n$).\n",
     "\n",
     "Others authors use a *differential* normalisation, that is, the normalisation value provided directly represents the constant, $k$, multiplying the analytical function.\n",
     "\n",
