--- a/2_energy_densities.ipynb
+++ b/2_energy_densities.ipynb
@@ -554,7 +554,7 @@
     "As explained in the beginning, the point-like source behind the jet (`PointSourceBehindJet`) is mostly used for cross checks.\n",
     "For large distances from the BH, typically much larger than the emitter size, $r >> R_{\\rm emitter}$, the photon field of the emitter can be approximated by the one produced by a point source behind the blob.\n",
     "\n",
-    "Show that the energy distribution of the BLR in the blob frame ($u'$), tends to the one of a point source approximating it for distances $r > R_{\\rm line}$.\n",
+    "Show, with a plot, that for distances $r > R_{\\rm line}$, the energy distribution of the BLR in the blob frame ($u'$) tends to the one of a point source approximating it.\n",
     "\n",
     "**Suggestion:** define a `PointSourceBehindJet` with the same luminosity of the BLR and emitting the same energy of the line."
    ]
