--- a/4_external_compton.ipynb
+++ b/4_external_compton.ipynb
@@ -437,7 +437,7 @@
     "\n",
     "### 4.3.1 Approximating the DT with a point-like monochromatic source\n",
     "\n",
-    "For a distance much larger than the dust torus radius, $r=10^{22}\\,{\\rm cm}$, produce the SED for EC on a point-like source approximating it (see previous exercise), and check if the latter \n",
+    "For a distance much larger than the dust torus radius, $r=10^{22}\\,{\\rm cm}$, produce the SED for EC on a point-like source approximating the DT (see previous exercise), and check if the latter correctly approximates the actual EC on the DT.\n",
     "\n",
     "What happens if we reduce the distance to $r=10^{21}\\,{\\rm cm}$, is the approximation still valid?"
    ]
