--- a/1_particles_distributions_and_emission_region.ipynb
+++ b/1_particles_distributions_and_emission_region.ipynb
@@ -108,10 +108,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c5fdf8",
+   "id": "5eaf809e",
    "metadata": {},
    "source": [
-    "## 1.1.1. Different methods to intialise the particle distribution (optional)\n",
+    "## 1.1.1. Different methods to initialise the particle distribution (optional)\n",
     "Authors use different approaches to define the particles distribution $n(\\gamma)$.\n",
     "A __normalisation__ of the distribution is often provided, which can be of different types.\n",
     "\n",
@@ -129,6 +129,7 @@
     "the value of the denisty at $\\gamma=1$.\n",
     "\n",
     "We offer all of the aforementioned alternatives to initialise a particles distribution in `agnpy`.\n",
+    "**If you use agnpy for publications you should specify what is the definition of normalization that you are using.**\n",
     "Here follows an example illustrating them:"
    ]
   },
@@ -274,6 +275,8 @@
     "- the magnetic field tangled to the blob, $B$, assumed to be uniform; \n",
     "- the energy distributions of particles accelerated in the blob.\n",
     "\n",
+    "Note that the radius, magnetic field and energy distribution of particles are expressed in the blob's rest frame.\n",
+    "\n",
     "Follows a snippet initialising the `Blob` with its physical quantities and an electrons distribution."
    ]
   },
@@ -386,6 +389,14 @@
    "source": [
     "blob.P_jet_B"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76ca195d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
