--- a/4_external_compton.ipynb
+++ b/4_external_compton.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "Similarly to the synchrotron and SSC case, to initialize the object that will compute the external Compton (EC) radiation, we simply pass the Blob and the Target objects to the `ExternalCompton` class. **Note in this case the distance r between the target and the emission region (in `astropy.units`) also has to be specified,** as the scattering will also depend on the distance between the electrons and the target photon fields. We will illustrate this effect, let us start very close to the BLR. \n",
     "\n",
-    "The distance is specified in units of the radius of the broad line region, that we have modelled an infinitesimal shell of radius $10^{17}\\,{\\rm cm}$."
+    "The distance is specified in units of the radius of the broad line region, that we have modelled as an infinitesimal shell of radius $10^{17}\\,{\\rm cm}$."
    ]
   },
   {
@@ -175,7 +175,7 @@
     "plot_sed(nu, sed_ec_blr_near, color=\"crimson\", label=\"EC on BLR\")\n",
     "plot_sed(nu, sed_ec_dt_near, color=\"dodgerblue\", label=\"EC on DT\")\n",
     "plt.title(\"'near' scenario, \" + r\"$r = 2\\,R_{\\rm BLR}$\")\n",
-    "plt.ylim([1e-20, 1e-14])\n",
+    "plt.ylim([1e-21, 1e-14])\n",
     "plt.show()"
    ]
   },
@@ -212,7 +212,7 @@
     "plot_sed(nu, sed_ec_blr_far, color=\"crimson\", label=\"EC on BLR\")\n",
     "plot_sed(nu, sed_ec_dt_far, color=\"dodgerblue\", label=\"EC on DT\")\n",
     "plt.title(\"'far' scenario, \" + r\"$r = 20\\,R_{\\rm line} \\approx 0.1\\,R_{\\rm DT}$\")\n",
-    "plt.ylim([1e-22, 1e-14])\n",
+    "plt.ylim([1e-21, 1e-14])\n",
     "plt.show()"
    ]
   },
@@ -349,6 +349,13 @@
     "\n",
     "What happens if we reduce the distance to $r=10^{21}\\,{\\rm cm}$, is the approximation still valid?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
