--- a/4_external_compton.ipynb
+++ b/4_external_compton.ipynb
@@ -220,6 +220,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "DT radiation field is spread over much larger distance, hence the corresponding SED dropped just slightly. But the larger distance is already way outside of BLR, hence the EC on BLR dropped considerably, making this process subdominant for such a distance.\n",
+    "If you model the source as synchr. radiation for low energy bump plus EC as high energy bump, always check the SSC emission - it will automaticaly come out of those assumptions and might have a non negligible contribution in some energy ranges. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4.2. Validation: compare the result of `agnpy` against the literature and `JetSet`\n",
     "\n",
     "In order to validate `agnpy` we can compare the results of its calculations against the literature and against other software. We choose the EC on DT for validation.\n",
