added a plot comparing the formulae for internal and external absorptions

--- a/5_absorption.ipynb
+++ b/5_absorption.ipynb
@@ -126,7 +126,8 @@
    "id": "4c166be3",
    "metadata": {},
    "source": [
-    "The absorption on external photon fields does not depend on any of the blob parameters, so we need to pass to the `Absorption` class an instance of the target and the distance from the photon field where to evaluate the absorption.   \n",
+    "Note that here we assumed that all of the accretion disk radiation goes into each of those lines. Normally it is only a small fraction (e.g. 10%) that goes into sum of all the lines (and different lines take different fractions of this). \n",
+    "The absorption on external photon fields (calculated for energies measured in the observer's frame of reference!) does not depend on any of the blob parameters, so we need to pass to the `Absorption` class an instance of the target and the distance from the photon field where to evaluate the absorption.   \n",
     "The redshift of the host galaxy is also needed to determine the transformation of the observed frequency once we compute the opacity values."
    ]
   },
@@ -183,6 +184,14 @@
     "plt.ylabel(tau_label)\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30f9314e",
+   "metadata": {},
+   "source": [
+    "The current BLR absorption calculation code is prone to numerical instabilities because of the used integration scheme. PR #133 will improve the situation. As a good practice you should calculate also absorption for a slightly different (a few per cent) distance and see if you get consistent results). "
    ]
   },
   {
@@ -296,7 +305,7 @@
    "source": [
     "## 5.3. Attenuation factor\n",
     "\n",
-    "We note that **internal and external absorption correspond to different attenuation factors of the final photon spectrum**, in particular, for photon fields external to the blob we have an attenuation factor reads\n",
+    "We note that **internal and external absorption correspond to different attenuation factors of the final photon spectrum**, in particular, for photon fields external to the blob we have an attenuation factor: \n",
     "\n",
     "$$\\exp(-\\tau_{\\gamma\\gamma}),$$\n",
     "\n",
@@ -304,6 +313,33 @@
     "\n",
     "$$\\frac{1 - \\exp(-\\tau_{\\gamma\\gamma})}{\\tau_{\\gamma\\gamma}}.$$\n",
     "\n",
+    "The reason is that \"external\" absorption is affecting all the photons in the same way, while the \"internal\" absorption will absorb more or less strongly depending if the photon is emitted more in the middle or close to the edge of the emission region. \n",
+    "Let's compare how the two look like for the same optical depth $\\tau$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e2b3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taus=np.logspace(-1,1)\n",
+    "plt.loglog(taus, np.exp(-taus), label=\"external\")\n",
+    "plt.loglog(taus, (1-np.exp(-taus))/taus, label=\"internal\")\n",
+    "plt.legend()\n",
+    "plt.ylabel(\"attenuation\")\n",
+    "plt.xlabel(\"optical depth\")\n",
+    "\n",
+    "plt.ylim([3e-5, 1.1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7ded6a0",
+   "metadata": {},
+   "source": [
     "`agnpy` directly allows to compute these factors through the `Absorption.absorption` and `Absorption.absorption_homogeneous` methods. We can therefore see the actual impact of internal and external photon fields on the final high-energy spectrum."
    ]
   },
