fixed a typo, and added explanation about k

--- a/1_particles_distributions_and_emission_region.ipynb
+++ b/1_particles_distributions_and_emission_region.ipynb
@@ -66,6 +66,7 @@
    "outputs": [],
    "source": [
     "# define an electron distribution\n",
+    "# for broken power-law, 'k' is defined at the break gamma factor\n",
     "n_e = BrokenPowerLaw(\n",
     "    k=1e-8 * u.Unit(\"cm-3\"),\n",
     "    p1=1.9,\n",
@@ -214,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# - from the denisty at gamma = 1\n",
+    "# - from the density at gamma = 1\n",
     "n_gamma_1 = 1e-4 * u.Unit(\"cm-3\")\n",
     "\n",
     "n_4 = LogParabola.from_density_at_gamma_1(\n",
