added more explanations about understanding fit value

--- a/6_ssc_gammapy_fit.ipynb
+++ b/6_ssc_gammapy_fit.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Several combination of radiative processes can be considered to model the broad-band emission of jetted AGN. For simplicity, we provide wrappers for the two scenarios most-commonly considered:\n",
     "\n",
-    " * `SycnhrotronSelfComptonModel`, representing the sum of synchrotron and synchrotron self Compton (SSC) radiation. This scenario is commonly considered to model BL Lac sources;\n",
+    " * `SynchrotronSelfComptonModel`, representing the sum of synchrotron and synchrotron self Compton (SSC) radiation. This scenario is commonly considered to model BL Lac sources;\n",
     "\n",
     " * `ExternalComptonModel`, representing the sum of synchrotron and synchrotron self Compton radiation along with an external Compton (EC) component. EC scattering can be computed considering a list of target photon fields. This scenario is commonly considered to model flat spectrum radio quasars (FSRQs).\n",
     "\n",
@@ -287,7 +287,8 @@
    "id": "316896e9",
    "metadata": {},
    "source": [
-    "#### 2) run the fit"
+    "#### 2) run the fit \n",
+    "this will likely take a few minutes"
    ]
   },
   {
@@ -375,6 +376,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a3320c0",
+   "metadata": {},
+   "source": [
+    "Note a very strong correlation between parameters (in particular Doppler factor and magnetic field). The solution is likely not unique. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "052e8131",
@@ -401,8 +410,26 @@
     "plt.plot(profile[\"Mrk421.spectral.log10_k_scan\"], profile[\"stat_scan\"] - total_stat)\n",
     "plt.ylabel(r\"$\\Delta(TS)$\", size=12)\n",
     "plt.xlabel(r\"$log_{10}(k_{\\rm e} / {\\rm cm}^{-3})$\", size=12)\n",
+    "plt.xlim(-7.88-0.07, -7.88+0.07)\n",
+    "plt.ylim(0, 500)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6bedbaf",
+   "metadata": {},
+   "source": [
+    "As you may notice, varying k_e by the size of the error estimate changes TS by much more than one would expect from 1 $\\sigma$ uncertainty. This is because ``stat_scan`` method scans one parameter simultaneously fixing all the others. In reality if k_e is forced to a different value, the fit will select more favourable values of the parameters that are strongly correlated with this one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c097cab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
