added some hints what to check to make sure the obtained model is reasonable

--- a/6_ssc_gammapy_fit.ipynb
+++ b/6_ssc_gammapy_fit.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a3320c0",
+   "id": "8b55fb06",
    "metadata": {},
    "source": [
     "Note a very strong correlation between parameters (in particular Doppler factor and magnetic field). The solution is likely not unique. "
@@ -417,16 +417,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6bedbaf",
+   "id": "ed27aa9b",
    "metadata": {},
    "source": [
     "As you may notice, varying k_e by the size of the error estimate changes TS by much more than one would expect from 1 $\\sigma$ uncertainty. This is because ``stat_scan`` method scans one parameter simultaneously fixing all the others. In reality if k_e is forced to a different value, the fit will select more favourable values of the parameters that are strongly correlated with this one"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d375884",
+   "metadata": {},
+   "source": [
+    "Before you use your fit results (e.g. in the paper), please make sure that they are reasonable from the physics point of view: \n",
+    "* have you considered all the processes that are relevant (e.g. if you have synchrotron radiation, you will also have SSC, if you have EC on BLR photons, you will have also absorption on them, etc.)\n",
+    "* do not forget about possible absorption, both due to external (local) sources, like BLR, but in some cases synchrotron radiation can also absorb your gamma rays\n",
+    "* can the parameters be physically motivated? if you get a break, can it position be associated to cooling? Any strange parameters (like upturning spectra)?\n",
+    "* vast variability limits the size of the emission region\n",
+    "* can the jet supply enough energy to power such a blob?\n",
+    "* in more complicated models involving multiple zones, thing about their relation - if they are co-special they would need to interact. If one zone is farther along the jet, the photons generated in the earlier zone might still need to pass throught the second zone (and be possibly absorbed)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c097cab",
+   "id": "d5ccfdcc",
    "metadata": {},
    "outputs": [],
    "source": []
